--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <footer>
 <h3> Contact </h3>
 <p> You can E-mail us at </p>
-<button action="mailto:support.hangman4e@gmail.com"> E-mail </button>
+<a href="mailto:support.hangman4e@gmail.com"> support.hangman4e@gmail.com </a>
 </footer>
 </body>
 </html>
