Repaired E-mail link, added a link to download our application

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 <footer>
 <h3> Contact </h3>
 <p> You can E-mail us at </p>
-<a href="mailto:support.hangman4e@gmail.com"> support.hangman4e@gmail.com </a>
+<a href="mailto:support.team6@gmail.com"> support.hangman4e@gmail.com </a>
+<p> Or </p>
+<a href="https://play.google.com/store/apps/details?id=hangman4e.apbyr"> Download our official application on Google Play </a>
 </footer>
 </body>
 </html>
