--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="en"><head>
+<html lang="en">
+<head>
 <title> Homepage for Hangman4E </title>
 <link rel="stylesheet" type="text/css" href= "./hangmanPage.css"/>
+<script src="./hangmanPage.js"></script>
 </head>
 
 <body>
@@ -18,9 +20,11 @@
 <footer>
 <h3> Contact </h3>
 <p> You can E-mail us at </p>
-<a href="mailto:support.team6@gmail.com"> support.hangman4e@gmail.com </a>
+<a href="mailto:team6.hangman4e@gmail.com"> team6.hangman4e@gmail.com </a>
 <p> Or </p>
 <a href="https://play.google.com/store/apps/details?id=hangman4e.apbyr"> Download our official application on Google Play </a>
+<br>
+<p> Copyright Team6 2019-2020, all rights reserved </p>
 </footer>
 </body>
 </html>
