Added a temporary privacy policy for our upcoming app

--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
 <title> Homepage for Hangman4E </title>
 <link rel="stylesheet" type="text/css" href= "./hangmanPage.css"/>
-<script src="./hangmanPage.js"></script>
 </head>
 
 <body>
@@ -25,6 +24,7 @@
 <a href="https://play.google.com/store/apps/details?id=hangman4e.apbyr"> Download our official application on Google Play </a>
 <br>
 <p> Copyright Team6 2019-2020, all rights reserved </p>
+<a href="privacy.html"> View the privacy policy for our new app, RN BookSearch </a>
 </footer>
 </body>
 </html>
